GNOME Bugzilla – Bug 776085
bluez: Fix caps leak in error code path
Last modified: 2018-04-12 17:32:55 UTC
Created attachment 341946 [details] [review] Fix memory leak in usage of gst_caps_new_simple API Fix memory leak in usage of gst_caps_new_simple API gst_caps_new_simple() returns a newly allocated GstCaps which need to be freed after the usage. Applied Fix: Added gst_caps_unref() to free the allocated memory.
Comment on attachment 341946 [details] [review] Fix memory leak in usage of gst_caps_new_simple API This does not apply to latest GIT master anymore, please update. Also run "gst-indent" over the code
Created attachment 342487 [details] [review] Fix memory leak in usage of gst_caps_new_simple API Please find the attached modified patch.
vtenc: commit 81b0a14d692bb679c5688ef597e5aab6f0ce7730 Author: Garima Gaur <garima.g@samsung.com> Date: Tue Jan 3 09:02:36 2017 +0530 Fix some caps leaks in pad template creation code gst_pad_template_new() does not take ownership of the caps passed to it, so we need to unref the caps. https://bugzilla.gnome.org/show_bug.cgi?id=776790 https://bugzilla.gnome.org/show_bug.cgi?id=776787 bluez: commit 70fbcf9c0fc81d97128dfe3c8a8ee9f1452a1226 Author: Garima Gaur <garima.g@samsung.com> Date: Tue Dec 27 13:45:49 2016 +0530 bluez: avdtpsrc: fix caps leak in error code paths https://bugzilla.gnome.org/show_bug.cgi?id=776085 Sorry this took so long to get in!